feat: Sincronizacao final e correcao de bug do botao

--- a/admin.html
+++ b/admin.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel do Barbeiro | Lopes Barbearia</title>
+    <title>Painel | Nossa Barbearia</title>
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
     <style>
         :root {
-            --primary: #d4af37;
-            --dark: #1a1a1a;
-            --gray: #333;
-            --light: #f4f4f4;
+            --primary: #1e90ff;
+            --dark: #000000;
+            --gray: #111111;
+            --light: #ffffff;
             --red: #e74c3c;
             --green: #2ecc71;
-            --blue: #3498db;
+            --blue: #1e90ff;
         }
 
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: var(--dark); color: var(--light); }
@@ -567,7 +567,7 @@
 <body>
 
     <header>
-        <h1>✂️ PAINEL DE AGENDAMENTOS (BARBEIRO)</h1>
+        <h1>✂️ PAINEL DE AGENDAMENTOS - NOSSA BARBEARIA</h1>
         <div id="adminWelcome" style="display:none;">
             <p style="margin: 0; font-weight: bold;">Bem-vindo, <span id="adminNameDisplay">Administrador</span>!</p>
             <button id="adminLogoutBtn">Sair do Painel</button>
@@ -772,12 +772,12 @@
         // ✅ SUAS CHAVES DO FIREBASE INTEGRADA
         // ============================================================
         const firebaseConfig = {
-            apiKey: "AIzaSyBLBFTLC7sqM9VUhlsypPugQ-LhcX7-0Rw",
-            authDomain: "barbearia-do-rei.firebaseapp.com",
-            projectId: "barbearia-do-rei",
-            storageBucket: "barbearia-do-rei.firebaseapp.com",
-            messagingSenderId: "546744214164",
-            appId: "1:546744214164:web:5bd367381afbef253d0a81"
+              apiKey: "AIzaSyAi2g57qd4J3ONEjGvTEct69jsdV9F59lg",
+              authDomain: "nossa-barbearia.firebaseapp.com",
+              projectId: "nossa-barbearia",
+              storageBucket: "nossa-barbearia.firebasestorage.app",
+              messagingSenderId: "545785512912",
+              appId: "1:545785512912:web:a917526f553c21945e6fd5",
         };
         // ============================================================
 
