--- a/admin.html
+++ b/admin.html
@@ -1557,12 +1557,12 @@
         import { getFirestore, collection, onSnapshot, doc, setDoc, deleteDoc, updateDoc, addDoc, getDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBLBFTLC7sqM9VUhlsypPugQ-LhcX7-0Rw",
-            authDomain: "barbearia-do-rei.firebaseapp.com",
-            projectId: "barbearia-do-rei",
-            storageBucket: "barbearia-do-rei.firebasestorage.app",
-            messagingSenderId: "546744214164",
-            appId: "1:546744214164:web:5bd367381afbef253d0a81"
+  apiKey: "AIzaSyAi2g57qd4J3ONEjGvTEct69jsdV9F59lg",
+  authDomain: "nossa-barbearia.firebaseapp.com",
+  projectId: "nossa-barbearia",
+  storageBucket: "nossa-barbearia.firebasestorage.app",
+  messagingSenderId: "545785512912",
+  appId: "1:545785512912:web:a917526f553c21945e6fd5",
         };
 
         const app = initializeApp(firebaseConfig);
